# gpu-screen-recorder-windows

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build.yml  code-quality.yml  release.yml
cmake/: FindFFMPEG.cmake
src/capture/: audio_capture.cpp  audio_capture.h  cursor_capture.cpp  cursor_capture.h  screen_capture.cpp  screen_capture.h
src/cli/: main.cpp
src/common/: config.cpp  config.h  log.cpp  log.h  types.h
src/encode/: audio_encoder.cpp  audio_encoder.h  direct_nvenc.cpp  direct_nvenc.h  muxer.cpp  muxer.h  video_encoder.cpp  video_encoder.h
src/recorder/: recorder.cpp  recorder.h
src/replay/: replay_buffer.cpp  replay_buffer.h
src/ui/: hotkeys.cpp  hotkeys.h  main.cpp  notification.cpp  notification.h  notification_main.cpp  overlay.cpp  overlay.h  ui_renderer.cpp  ui_renderer.h
